application-code/application-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: app-ns
spec:
  selector:
    matchLabels:
      run: python-app
  template:
    metadata:
      labels:
        run: python-app
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: application-node-pool
      serviceAccountName: python-app-sa
      containers:
      - image: us-central1-docker.pkg.dev/<project-id>/application-repo/todo-app:1.0
        name: python-app-app
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          requests:
            cpu: 128m
            memory: 258Mi
          limits:
            cpu: 256m
            memory: 258Mi
