application-code/application-manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app-http-route
  namespace: app-ns
spec:
  parentRefs:
  - name: app-gtw
  hostnames:
  - abc.xyz.com
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: python-app-svc
      port: 80
